// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Nav/DataNavItem should display a nav item of variant default 1`] = `
".a {
  display: block;
}
.b {
  font-size: 1rem;
}
.c {
  font-weight: 400;
}
.d {
  color: #0d6efd;
}
.e {
  background: none;
}
.n {
  transition-property: color, background-color, border-color;
}
.o {
  transition-duration: 0.15s, 0.15s, 0.15s;
}
.p {
  transition-delay: ease-in-out, ease-in-out, ease-in-out;
}
.q {
  transition-timing-function: ease, ease, ease;
}
.r {
  border-top-width: 0;
}
.s {
  border-right-width: 0;
}
.t {
  border-bottom-width: 0;
}
.u {
  border-left-width: 0;
}
.v {
  text-decoration-line: none;
}
.w {
  padding-top: 0.5rem;
}
.x {
  padding-right: 1rem;
}
.y {
  padding-bottom: 0.5rem;
}
.z {
  padding-left: 1rem;
}
.j:hover {
  color: #0a58ca;
}
.k:focus {
  color: #0a58ca;
}
.l:focus-visible {
  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}
.m:focus-visible {
  outline-width: 0;
}
@media (prefers-reduced-motion: reduce) {
  .f {
    transition-property: none;
  }
  .g {
    transition-duration: 0s;
  }
  .h {
    transition-delay: 0s;
  }
  .i {
    transition-timing-function: ease;
  }
}


<li data-testid="nav-item" class="nav-item">
  <a
    data-testid="nav-link"
    href="/item"
    class="a b c d e f g h i j k l m n o p q r s t u v w x y z nav-link"
    >Data Nav Item</a
  >
</li>
;
"
`;

exports[`components/Nav/DataNavItem should display a nav item of variant pills 1`] = `
".a {
  display: block;
}
.b {
  font-size: 1rem;
}
.c {
  font-weight: 400;
}
.d {
  color: #0d6efd;
}
.e {
  background: none;
}
.n {
  border-top-left-radius: 0.375rem;
}
.o {
  border-top-right-radius: 0.375rem;
}
.p {
  border-bottom-right-radius: 0.375rem;
}
.q {
  border-bottom-left-radius: 0.375rem;
}
.r {
  transition-property: color, background-color, border-color;
}
.s {
  transition-duration: 0.15s, 0.15s, 0.15s;
}
.t {
  transition-delay: ease-in-out, ease-in-out, ease-in-out;
}
.u {
  transition-timing-function: ease, ease, ease;
}
.v {
  border-top-width: 0;
}
.w {
  border-right-width: 0;
}
.x {
  border-bottom-width: 0;
}
.y {
  border-left-width: 0;
}
.z {
  text-decoration-line: none;
}
.ab {
  padding-top: 0.5rem;
}
.ac {
  padding-right: 1rem;
}
.ae {
  padding-bottom: 0.5rem;
}
.af {
  padding-left: 1rem;
}
.j:hover {
  color: #0a58ca;
}
.k:focus {
  color: #0a58ca;
}
.l:focus-visible {
  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}
.m:focus-visible {
  outline-width: 0;
}
@media (prefers-reduced-motion: reduce) {
  .f {
    transition-property: none;
  }
  .g {
    transition-duration: 0s;
  }
  .h {
    transition-delay: 0s;
  }
  .i {
    transition-timing-function: ease;
  }
}


<li data-testid="nav-item" class="nav-item">
  <a
    data-testid="nav-link"
    href="/item"
    class="a ab ac ae af b c d e f g h i j k l m n o p q r s t u v w x y z nav-link"
    >Data Nav Item</a
  >
</li>
;
"
`;

exports[`components/Nav/DataNavItem should display a nav item of variant tabs 1`] = `
".a {
  display: block;
}
.b {
  font-size: 1rem;
}
.c {
  font-weight: 400;
}
.d {
  color: #0d6efd;
}
.e {
  background: none;
}
.v {
  margin-bottom: -1px;
}
.w {
  border-top-left-radius: 0.375rem;
}
.x {
  border-top-right-radius: 0.375rem;
}
.y {
  transition-property: color, background-color, border-color;
}
.z {
  transition-duration: 0.15s, 0.15s, 0.15s;
}
.ab {
  transition-delay: ease-in-out, ease-in-out, ease-in-out;
}
.ac {
  transition-timing-function: ease, ease, ease;
}
.ae {
  border-top-width: 1px;
}
.af {
  border-right-width: 1px;
}
.ag {
  border-bottom-width: 1px;
}
.ah {
  border-left-width: 1px;
}
.ai {
  border-top-style: solid;
}
.aj {
  border-right-style: solid;
}
.ak {
  border-bottom-style: solid;
}
.al {
  border-left-style: solid;
}
.am {
  border-top-color: transparent;
}
.an {
  border-right-color: transparent;
}
.ao {
  border-bottom-color: transparent;
}
.ap {
  border-left-color: transparent;
}
.aq {
  text-decoration-line: none;
}
.ar {
  padding-top: 0.5rem;
}
.as {
  padding-right: 1rem;
}
.at {
  padding-bottom: 0.5rem;
}
.au {
  padding-left: 1rem;
}
.j:hover {
  color: #0a58ca;
}
.k:hover {
  border-top-color: #e9ecef;
}
.l:hover {
  border-right-color: #e9ecef;
}
.m:hover {
  border-bottom-color: #dee2e6;
}
.n:hover {
  border-left-color: #e9ecef;
}
.o:focus {
  color: #0a58ca;
}
.p:focus {
  border-top-color: #e9ecef;
}
.q:focus {
  border-right-color: #e9ecef;
}
.r:focus {
  border-bottom-color: #dee2e6;
}
.s:focus {
  border-left-color: #e9ecef;
}
.t:focus-visible {
  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}
.u:focus-visible {
  outline-width: 0;
}
@media (prefers-reduced-motion: reduce) {
  .f {
    transition-property: none;
  }
  .g {
    transition-duration: 0s;
  }
  .h {
    transition-delay: 0s;
  }
  .i {
    transition-timing-function: ease;
  }
}


<li data-testid="nav-item" class="nav-item">
  <a
    data-testid="nav-link"
    href="/item"
    class="a ab ac ae af ag ah ai aj ak al am an ao ap aq ar as at au b c d e f g h i j k l m n o p q r s t u v w x y z nav-link"
    >Data Nav Item</a
  >
</li>
;
"
`;

exports[`components/Nav/DataNavItem should display a nav item of variant underline 1`] = `
".a {
  display: block;
}
.b {
  font-size: 1rem;
}
.c {
  font-weight: 400;
}
.d {
  color: #0d6efd;
}
.e {
  background: none;
}
.p {
  padding-right: 0;
}
.q {
  padding-left: 0;
}
.r {
  border-bottom-width: 0.125rem;
}
.s {
  border-bottom-style: solid;
}
.t {
  border-bottom-color: transparent;
}
.u {
  transition-property: color, background-color, border-color;
}
.v {
  transition-duration: 0.15s, 0.15s, 0.15s;
}
.w {
  transition-delay: ease-in-out, ease-in-out, ease-in-out;
}
.x {
  transition-timing-function: ease, ease, ease;
}
.y {
  border-top-width: 0;
}
.z {
  border-right-width: 0;
}
.ab {
  border-left-width: 0;
}
.ac {
  text-decoration-line: none;
}
.ae {
  padding-top: 0.5rem;
}
.af {
  padding-bottom: 0.5rem;
}
.j:hover {
  color: #0a58ca;
}
.k:hover {
  border-bottom-color: currentcolor;
}
.l:focus {
  color: #0a58ca;
}
.m:focus {
  border-bottom-color: currentcolor;
}
.n:focus-visible {
  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}
.o:focus-visible {
  outline-width: 0;
}
@media (prefers-reduced-motion: reduce) {
  .f {
    transition-property: none;
  }
  .g {
    transition-duration: 0s;
  }
  .h {
    transition-delay: 0s;
  }
  .i {
    transition-timing-function: ease;
  }
}


<li data-testid="nav-item" class="nav-item">
  <a
    data-testid="nav-link"
    href="/item"
    class="a ab ac ae af b c d e f g h i j k l m n o p q r s t u v w x y z nav-link"
    >Data Nav Item</a
  >
</li>
;
"
`;

exports[`components/Nav/DataNavItem should display a nav item of variant vertical 1`] = `
".a {
  display: block;
}
.b {
  font-size: 1rem;
}
.c {
  font-weight: 400;
}
.d {
  color: #0d6efd;
}
.e {
  background: none;
}
.n {
  transition-property: color, background-color, border-color;
}
.o {
  transition-duration: 0.15s, 0.15s, 0.15s;
}
.p {
  transition-delay: ease-in-out, ease-in-out, ease-in-out;
}
.q {
  transition-timing-function: ease, ease, ease;
}
.r {
  border-top-width: 0;
}
.s {
  border-right-width: 0;
}
.t {
  border-bottom-width: 0;
}
.u {
  border-left-width: 0;
}
.v {
  text-decoration-line: none;
}
.w {
  padding-top: 0.5rem;
}
.x {
  padding-right: 1rem;
}
.y {
  padding-bottom: 0.5rem;
}
.z {
  padding-left: 1rem;
}
.j:hover {
  color: #0a58ca;
}
.k:focus {
  color: #0a58ca;
}
.l:focus-visible {
  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}
.m:focus-visible {
  outline-width: 0;
}
@media (prefers-reduced-motion: reduce) {
  .f {
    transition-property: none;
  }
  .g {
    transition-duration: 0s;
  }
  .h {
    transition-delay: 0s;
  }
  .i {
    transition-timing-function: ease;
  }
}


<li data-testid="nav-item" class="nav-item">
  <a
    data-testid="nav-link"
    href="/item"
    class="a b c d e f g h i j k l m n o p q r s t u v w x y z nav-link"
    >Data Nav Item</a
  >
</li>
;
"
`;

exports[`components/Nav/DataNavItem should display a nav item with a nav link 1`] = `
".a {
  display: block;
}
.b {
  font-size: 1rem;
}
.c {
  font-weight: 400;
}
.d {
  color: #0d6efd;
}
.e {
  background: none;
}
.n {
  transition-property: color, background-color, border-color;
}
.o {
  transition-duration: 0.15s, 0.15s, 0.15s;
}
.p {
  transition-delay: ease-in-out, ease-in-out, ease-in-out;
}
.q {
  transition-timing-function: ease, ease, ease;
}
.r {
  border-top-width: 0;
}
.s {
  border-right-width: 0;
}
.t {
  border-bottom-width: 0;
}
.u {
  border-left-width: 0;
}
.v {
  text-decoration-line: none;
}
.w {
  padding-top: 0.5rem;
}
.x {
  padding-right: 1rem;
}
.y {
  padding-bottom: 0.5rem;
}
.z {
  padding-left: 1rem;
}
.j:hover {
  color: #0a58ca;
}
.k:focus {
  color: #0a58ca;
}
.l:focus-visible {
  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}
.m:focus-visible {
  outline-width: 0;
}
@media (prefers-reduced-motion: reduce) {
  .f {
    transition-property: none;
  }
  .g {
    transition-duration: 0s;
  }
  .h {
    transition-delay: 0s;
  }
  .i {
    transition-timing-function: ease;
  }
}


<li data-testid="nav-item" class="nav-item">
  <a
    data-testid="nav-link"
    href="/item"
    class="a b c d e f g h i j k l m n o p q r s t u v w x y z nav-link"
    >Data Nav Item</a
  >
</li>
;
"
`;

exports[`components/Nav/DataNavItem should display a nav item with dropdown items 1`] = `
".a {
  background-clip: padding-box;
}
.b {
  background-color: #fff;
}
.c {
  color: #212529;
}
.d {
  display: block;
}
.e {
  font-size: 1rem;
}
.f {
  left: 0;
}
.g {
  list-style: none;
}
.h {
  width: 100%;
}
.i {
  margin-top: calc(-1 * 1px);
}
.j {
  min-width: 10rem;
}
.k {
  position: absolute;
}
.l {
  text-align: left;
}
.m {
  top: -2.5rem;
}
.n {
  z-index: 1000;
}
.o {
  transform: translate3d(0px, 40px, 0px);
}
.p {
  border-top-left-radius: 0;
}
.q {
  border-top-right-radius: 0;
}
.r {
  right: auto;
}
.s {
  bottom: auto;
}
.t {
  padding-top: 0.5rem;
}
.u {
  padding-right: 0.125rem;
}
.v {
  padding-bottom: 0.5rem;
}
.w {
  padding-left: 0.125rem;
}
.x {
  margin-right: 0px;
}
.y {
  margin-bottom: 0px;
}
.z {
  margin-left: 0px;
}
.ab {
  border-bottom-right-radius: 0.375rem;
}
.ac {
  border-bottom-left-radius: 0.375rem;
}
.ae {
  border-top-width: 1px;
}
.af {
  border-right-width: 1px;
}
.ag {
  border-bottom-width: 1px;
}
.ah {
  border-left-width: 1px;
}
.ai {
  border-top-style: solid;
}
.aj {
  border-right-style: solid;
}
.ak {
  border-bottom-style: solid;
}
.al {
  border-left-style: solid;
}
.am {
  border-top-color: rgba(0, 0, 0, 0.175);
}
.an {
  border-right-color: rgba(0, 0, 0, 0.175);
}
.ao {
  border-bottom-color: rgba(0, 0, 0, 0.175);
}
.ap {
  border-left-color: rgba(0, 0, 0, 0.175);
}
.aq {
  margin-top: -0.2rem;
}
.ar {
  padding-top: 0;
}
.as {
  white-space: nowrap;
}
.at:empty::after {
  margin-left: 0;
}
.au::after {
  content:;
}
.av::after {
  display: inline-block;
}
.aw::after {
  margin-left: 0.255em;
}
.ax::after {
  vertical-align: 0.255em;
}
.ay::after {
  border-top-width: 0.3em;
}
.az::after {
  border-top-style: solid;
}
.ba::after {
  border-right-width: 0.3em;
}
.bb::after {
  border-right-style: solid;
}
.bc::after {
  border-right-color: transparent;
}
.bd::after {
  border-left-width: 0.3em;
}
.be::after {
  border-left-style: solid;
}
.bf::after {
  border-left-color: transparent;
}
.bg::after {
  border-bottom-width: 0;
}
.bh {
  font-weight: 400;
}
.bi {
  color: #0d6efd;
}
.bj {
  background: none;
}
.bs {
  transition-property: color, background-color, border-color;
}
.bt {
  transition-duration: 0.15s, 0.15s, 0.15s;
}
.bu {
  transition-delay: ease-in-out, ease-in-out, ease-in-out;
}
.bv {
  transition-timing-function: ease, ease, ease;
}
.bw {
  border-top-width: 0;
}
.bx {
  border-right-width: 0;
}
.by {
  border-bottom-width: 0;
}
.bz {
  border-left-width: 0;
}
.ca {
  text-decoration-line: none;
}
.cb {
  padding-right: 1rem;
}
.cc {
  padding-left: 1rem;
}
.cd {
  content:;
}
.ce {
  display: inline-block;
}
.cf {
  margin-left: calc(0.3em * 0.85);
}
.cg {
  vertical-align: calc(0.3em * 0.85);
}
.ch {
  border-top-width: 0.3em;
}
.ci {
  border-right-width: 0.3em;
}
.cj {
  border-right-color: transparent;
}
.ck {
  border-left-width: 0.3em;
}
.cl {
  border-left-color: transparent;
}
.cm {
  top: 0;
}
.cn {
  width: auto;
}
.bo:hover {
  color: #0a58ca;
}
.bp:focus {
  color: #0a58ca;
}
.bq:focus-visible {
  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}
.br:focus-visible {
  outline-width: 0;
}
@media (prefers-reduced-motion: reduce) {
  .bk {
    transition-property: none;
  }
  .bl {
    transition-duration: 0s;
  }
  .bm {
    transition-delay: 0s;
  }
  .bn {
    transition-timing-function: ease;
  }
}


<li data-testid="nav-item" class="nav-item">
  <a
    data-testid="dropdown-toggle"
    class="bh bi bj bk bl bm bn bo bp bq br bs bt bu bv bw bx by bz ca cb cc d e t v nav-link as at au av aw ax ay az ba bb bc bd be bf bg dropdown-toggle"
    tabindex="0"
    aria-expanded="false"
    aria-haspopup="listbox"
    role="combobox"
    >Dropdown Nav
    <div
      class="ai aj al by cd ce cf cg ch ci cj ck cl"
      data-testid="dropdown-toggle-caret"
    ></div
  ></a>
</li>
;
"
`;
